recreate/test_cases/test_case_4_folder/test_case_4_folder.out
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_4_folder/test_case_4.cpp:3:80: error: stray ‘\’ in program
    3 | #define optimize()                                                             \\
    4 |   ios_base::sync_with_stdio(0);                                                \\
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_4_folder/test_case_4.cpp:9:3: note: in expansion of macro ‘optimize’
    9 |   optimize();
      |   ^~~~~~~~
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_4_folder/test_case_4.cpp:4:80: error: stray ‘\’ in program
    4 |   ios_base::sync_with_stdio(0);                                                \\
    5 |   cin.tie(0);                                                                  \\
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_4_folder/test_case_4.cpp:9:3: note: in expansion of macro ‘optimize’
    9 |   optimize();
      |   ^~~~~~~~
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_4_folder/test_case_4.cpp:5:80: error: stray ‘\’ in program
    5 |   cin.tie(0);                                                                  \\
    6 |   cout.tie(0);
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_4_folder/test_case_4.cpp:9:3: note: in expansion of macro ‘optimize’
    9 |   optimize();
      |   ^~~~~~~~
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_4_folder/test_case_4.cpp:21:18: warning: multi-character character constant [-Wmultichar]
   21 |   cout << sum << endl;
      |                  ^~~~
